change to IdentityHashMap